--- a/app/src/main/res/menu/bottom_toolbar_menu.xml
+++ b/app/src/main/res/menu/bottom_toolbar_menu.xml
@@ -12,7 +12,7 @@
 
     <item
         android:id="@+id/tabCamera"
-
+        android:icon="@drawable/ic_appareil_photo"
         android:title="@string/cam" />
 
 
