--- a/app/src/main/res/layout/fragment_acceuil.xml
+++ b/app/src/main/res/layout/fragment_acceuil.xml
@@ -11,19 +11,41 @@
         android:layout_height="wrap_content" />
 
 
-    <!-- Barre de recherche -->
-    <LinearLayout
-        android:id="@+id/bottomMenu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="265dp"
+        android:layout_height="238dp"
         android:layout_below="@id/header"
-        android:layout_margin="10dp"
-        android:background="@drawable/flat_radius_shape">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+
+        android:layout_marginTop="-1dp"
+
+        android:contentDescription="Logo"
+        android:src="@drawable/logo_base" />
+
+
+    <!-- Barre de recherche -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/bottomMenu"
+
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+
+        android:layout_below="@id/logo"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/card_background"
+        android:elevation="4dp"
+        android:orientation="horizontal"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <!-- Barre de recherche -->
@@ -31,27 +53,31 @@
                 android:id="@+id/searchBar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:layout_weight="1"
-                android:textColorHint="@color/white"
-
                 android:hint="Rechercher..."
+                android:textColor="@color/green_a"
+                android:shadowColor="@color/green_a"
+                android:inputType="text"
                 android:padding="10dp"
-                android:layout_margin="15dp"
-                />
+                android:textColorHint="@color/white" />
+
             <!-- Icône utilisateur -->
             <ImageView
                 android:id="@+id/searchIcon"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:src="@drawable/ic_search_white"
                 android:layout_gravity="center_vertical"
-                android:layout_marginRight="20dp"/>
+                android:layout_marginRight="20dp"
+                android:src="@drawable/ic_chercher_green" />
 
         </LinearLayout>
 
-    </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
 
-    <!-- Menu inférieur divisé en 4 -->
+
+
     <LinearLayout
         android:id="@+id/bottomMenu2"
         android:layout_width="match_parent"
@@ -68,16 +94,20 @@
             android:orientation="vertical">
 
             <Button
+                android:id="@+id/addressButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
+                android:layout_marginStart="4dp"
                 android:layout_margin="8dp"
                 android:layout_weight="1"
                 android:drawableTop="@drawable/ic_adresse_white"
-                android:text="Address"
-                android:background="@drawable/flat_radius_shape"/>
+                android:text="@string/address"
+
+                android:background="@drawable/button_selector"
+             />
 
             <Button
+                android:id="@+id/emailButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4dp"
@@ -85,7 +115,7 @@
                 android:layout_weight="1"
                 android:drawableTop="@drawable/ic_mail_white"
                 android:text="Email"
-                android:background="@drawable/flat_radius_shape"/>
+                android:background="@drawable/button_selector"/>
 
         </LinearLayout>
 
@@ -93,9 +123,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/card_background"
             android:orientation="vertical">
 
             <Button
+                android:id="@+id/plant1Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4dp"
@@ -103,9 +135,10 @@
                 android:layout_weight="1"
                 android:drawableTop="@drawable/ic_plante_en_pot_white"
                 android:text="Plant 1"
-                android:background="@drawable/flat_radius_shape"/>
+                android:background="@drawable/button_selector"/>
 
             <Button
+                android:id="@+id/plant2Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4dp"
@@ -113,10 +146,12 @@
                 android:layout_weight="1"
                 android:drawableTop="@drawable/ic_plante_en_pot_white"
                 android:text="Plant 2"
-                android:background="@drawable/flat_radius_shape"/>
+                android:background="@drawable/button_selector"/>
 
         </LinearLayout>
 
     </LinearLayout>
+
+
 
 </RelativeLayout>
