--- a/app/src/main/res/layout/layout_header.xml
+++ b/app/src/main/res/layout/layout_header.xml
@@ -25,25 +25,25 @@
         <ImageView
             android:id="@+id/iv_Left_Arrow"
             android:layout_width="40dp"
-            android:layout_height="20dp"
+            android:layout_height="25dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="15dp"
             android:layout_marginTop="17dp"
             android:visibility="gone"
-            app:srcCompat="@drawable/ic_prev" />
+            app:srcCompat="@drawable/ic_parametres_green" />
 
         <ImageView
             android:id="@+id/iv_Right_Arrow"
             android:layout_width="40dp"
-            android:layout_height="20dp"
+            android:layout_height="25dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="17dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="44dp"
             android:visibility="gone"
-            app:srcCompat="@drawable/ic_edit_user" />
+            app:srcCompat="@drawable/ic_utilisateur_green" />
 
 
     </RelativeLayout>
