--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="map_padding">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">2</dimen>
+    <dimen name="activity_horizontal_margin">2</dimen>
 </resources>
