--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -73,6 +73,15 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/green_a</item>
     </style>
+    <style name="Theme.Base.TextView.Bold" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/green_a</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 
     <style name="Theme.Base" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
